# rm_client

./: .gitignore  CMakeLists.txt  README.md  RM_自定义客户端_topic_message总表_基准版.docx  package.xml
config/: judge_params.yaml
frontend/: app.js  index.html  style.css
include/rm_client/: state_store.hpp  topic_registry.hpp
proto/: guard_ctrl.proto  judge_system.proto
scripts/: run_client_dev.sh  run_client_match.sh  state_bridge.py  stop_client.sh
src/: camera_custom_image_pub.cpp  judge_receiver.cpp  judge_sender.cpp  mock_custom_image_pub.cpp  semi_auto_keyboard.cpp  state_store.cpp  topic_registry.cpp
